5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1836_1274.log
== TEST (2019-06-27 08:03:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input("Insira um numero:"))

mat = zeros((n,n),dtype=int)

for i in range n:
	for j in range n:
		if (i = j):
			mat[i,j] = mat[i,j] + 1
		else:
			mat[i,j] = 2
print(mat)
			
-- ERROR:
File "XXXX", line 8
    for i in range n:
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 08:03:51) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input("Insira um numero:"))

mat = zeros((n,n),dtype=int)

for i in range (n):
	for j in range (n):
		if (i = j):
			mat[i,j] = mat[i,j] + 1
		else:
			mat[i,j] = 2
print(mat)
			
-- ERROR:
File "XXXX", line 10
    if (i = j):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 08:03:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input("Insira um numero:"))

mat = zeros((n,n),dtype=int)

for i in range (n):
	for j in range (n):
		if (i = j):
			mat[i,j] = mat[i,j] + 1
		else:
			mat[i,j] = 2
print(mat)
			
-- ERROR:
File "XXXX", line 10
    if (i = j):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 08:04:03) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input("Insira um numero:"))

mat = zeros((n,n),dtype=int)

for i in range (n):
	for j in range (n):
		if (i == j):
			mat[i,j] = mat[i,j] + 1
		else:
			mat[i,j] = 2
print(mat)
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 08:04:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input("Insira um numero:"))

mat = zeros((n,n),dtype=int)

for i in range (n):
	for j in range (n):
		if (i == j):
			mat[i,j] = mat[i,j] + 1
		else:
			mat[i,j] = 2
print(mat)
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 08:04:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input("Insira um numero:"))

mat = zeros((n,n),dtype=int)

for i in range (n):
	for j in range (n):
		if (i == j):
			mat[i,j] = 1+1
		else:
			mat[i,j] = 2
print(mat)
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 08:05:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input("Insira um numero:"))

mat = zeros((n,n),dtype=int)
x = mat[i,j]
for i in range (n):
	for j in range (n):
		if (i == j):
			mat[i,j] = x
			x = x+1
		else:
			mat[i,j] = 2
print(mat)
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 08:05:49) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input("Insira um numero:"))

mat = zeros((n,n),dtype=int)

for i in range (n):
	for j in range (n):
		x = mat[i,j]
		if (i == j):
			mat[i,j] = x
			x = x+1
		else:
			mat[i,j] = 2
print(mat)
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 08:07:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input("Insira um numero:"))

mat = zeros((n,n),dtype=int)
x = 1
for i in range (n):
	for j in range (n):
		if (i == j):
			mat[i,j] = mat[i,j] + x
			x = x+1
		else:
			mat[i,j] = 2
print(mat)
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 08:07:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input("Insira um numero:"))

mat = zeros((n,n),dtype=int)
x = 1
for i in range (n):
	for j in range (n):
		if (i == j):
			mat[i,j] = mat[i,j] + x
			x = x+1
		elif (i < j)
			mat[i,j] = 1
print(mat)
			
-- ERROR:
File "XXXX", line 13
    elif (i < j)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 08:08:04) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input("Insira um numero:"))

mat = zeros((n,n),dtype=int)
x = 1
for i in range (n):
	for j in range (n):
		if (i == j):
			mat[i,j] = mat[i,j] + x
			x = x+1
		elif (i < j):
			mat[i,j] = 1
print(mat)
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 08:08:28) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input("Insira um numero:"))

mat = zeros((n,n),dtype=int)
x = 1
for i in range (n):
	for j in range (n):
		if (i == j):
			mat[i,j] = mat[i,j] + x
			x = x+1
		elif (i < j):
			mat[i,j] = mat[i,j] + 1
print(mat)
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 08:11:31) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input("Insira um numero:"))

mat = zeros((n,n),dtype=int)
x = 1
for i in range (n):
	for j in range (n):
		if (i == j):
			mat[i,j] = mat[i,j] + x
			x = x+1
		elif (i < j):
			mat[i,j] = mat[i,j] + j
		
print(mat)
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 08:16:21) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input("Insira um numero:"))

mat = zeros((n,n),dtype=int)

for i in range (n):
	for j in range (n):
		for x in range (n):
			if(i == x or j == x):
				mat[i,j] = mat[i,j] + x
print(mat)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 08:16:42) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input("Insira um numero:"))

mat = ones((n,n),dtype=int)

for i in range (n):
	for j in range (n):
		for x in range (n):
			if(i == x or j == x):
				mat[i,j] = mat[i,j] + x
print(mat)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 08:16:46) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input("Insira um numero:"))

mat = ones((n,n),dtype=int)

for i in range (n):
	for j in range (n):
		for x in range (n):
			if(i == x or j == x):
				mat[i,j] = mat[i,j] + x
print(mat)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 08:17:13) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input("Insira um numero:"))

mat = ones((n,n),dtype=int)

for i in range (n):
	for j in range (n):
		for x in range (n):
			if(i == x ):
				mat[i,j] = mat[i,j] + x
print(mat)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 08:17:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input("Insira um numero:"))

mat = ones((n,n),dtype=int)

for i in range (n):
	for j in range (n):
		for x in range (n):
			if(j == x ):
				mat[i,j] = mat[i,j] + x
print(mat)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 08:17:39) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input("Insira um numero:"))

mat = ones((n,n),dtype=int)

for i in range (n):
	for j in range (n):
		for x in range (n):
			if(j == x and i == x ):
				mat[i,j] = mat[i,j] + x
print(mat)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 08:19:49) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input("Insira um numero:"))

mat = ones((n,n),dtype=int)

for i in range (n):
	for j in range (n):
		for x in range (n):
			if(j == x and i == x ):
				mat[i,j] = mat[i,j] + x
			elif i > x:
				mat[i,j] = mat[i,j] + x
print(mat)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 08:19:54) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input("Insira um numero:"))

mat = ones((n,n),dtype=int)

for i in range (n):
	for j in range (n):
		for x in range (n):
			if(j == x and i == x ):
				mat[i,j] = mat[i,j] + x
			elif i > x:
				mat[i,j] = mat[i,j] + x
print(mat)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 08:20:45) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input("Insira um numero:"))

mat = ones((n,n),dtype=int)

for i in range (n):
	for j in range (n):
		for x in range (n):
			if(j == x and i == x ):
				mat[i,j] = mat[i,j] + x
			
print(mat)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 08:21:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input("Insira um numero:"))

mat = ones((n,n),dtype=int)

for i in range (n):
	for j in range (n):
		for x in range (n):
			if(j == x and i == x ):
				mat[i,j] = mat[i,j] + x
			
print(mat)

-- EXECUTION TIME:
1.16062
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 1 1]
 [1 2 1]
 [1 1 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:
[[1 1 1 1 1 1 1 1]
 [1 2 1 1 1 1 1 1]
 [1 1 3 1 1 1 1 1]
 [1 1 1 4 1 1 1 1]
 [1 1 1 1 5 1 1 1]
 [1 1 1 1 1 6 1 1]
 [1 1 1 1 1 1 7 1]
 [1 1 1 1 1 1 1 8]]
-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
[[1]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 08:22:19) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input("Insira um numero:"))

mat = ones((n,n),dtype=int)

for i in range (n):
	for j in range (n):
		for x in range (n):
			if(j == x): #and i == x ):
				mat[i,j] = mat[i,j] + x
			
print(mat)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 08:22:23) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input("Insira um numero:"))

mat = ones((n,n),dtype=int)

for i in range (n):
	for j in range (n):
		for x in range (n):
			if(j == x): #and i == x ):
				mat[i,j] = mat[i,j] + x
			
print(mat)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 08:23:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input("Insira um numero:"))

mat = ones((n,n),dtype=int)

for i in range (n):
	for j in range (n):
		for x in range (n):
			if(j == x): #and i == x ):
				mat[i,j] = mat[i,j] + x
			elif (i == x) :
				mat[i,j] = mat[i,j] + x
print(mat)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 08:24:10) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input("Insira um numero:"))

mat = ones((n,n),dtype=int)

for i in range (n):
	for j in range (n):
		for x in range (n):
			if(j == x) and (i == x) :
				mat[i,j] = mat[i,j] + x
			
print(mat)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 08:25:10) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input("Insira um numero:"))

mat = ones((n,n),dtype=int)

for i in range (n):
	for j in range (n):
		for x in range (n):
			if(j == x): #and (i == x) :
				mat[i,j] = mat[i,j] + x
			
print(mat)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 08:25:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input("Insira um numero:"))

mat = ones((n,n),dtype=int)

for i in range (n):
	for j in range (n):
		for x in range (n):
		for z in range (n):
			if(j == x): #and (i == x) :
				mat[i,j] = mat[i,j] + x
			elif(i == n):
				mat[i,j] = mat[i,j] + n
print(mat)

-- ERROR:
File "XXXX", line 11
    for z in range (n):
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 08:26:04) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input("Insira um numero:"))

mat = ones((n,n),dtype=int)

for i in range (n):
	for j in range (n):
		for x in range (n):
			for z in range (n):
				if(j == x): #and (i == x) :
					mat[i,j] = mat[i,j] + x
				elif(i == n):
					mat[i,j] = mat[i,j] + n
print(mat)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 08:26:41) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input("Insira um numero:"))

mat = ones((n,n),dtype=int)

for i in range (n):
	for j in range (n):
		for x in range (n):
			if(j == x): #and (i == x) :
				mat[i,j] = mat[i,j] + x
			elif(i == x):
				mat[i,j] = mat[i,j] + x

print(mat)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:13:08) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input("Insira um numero:"))

mat = ones((n,n),dtype=int)

for i in range (n):
	for j in range (n):
		for x in range (n):
			if(j == x): #and (i == x) :
				mat[i,j] = mat[i,j] + x
			elif(i > j):
				mat[i,j] = mat[i,j] + j

print(mat)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:13:15) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input("Insira um numero:"))

mat = ones((n,n),dtype=int)

for i in range (n):
	for j in range (n):
		for x in range (n):
			if(j == x): #and (i == x) :
				mat[i,j] = mat[i,j] + x
			elif(i > j):
				mat[i,j] = mat[i,j] + j

print(mat)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:13:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input("Insira um numero:"))

mat = ones((n,n),dtype=int)

for i in range (n):
	for j in range (n):
		for x in range (n):
			if(j == x): #and (i == x) :
				mat[i,j] = mat[i,j] + x
			elif(i > j)
				mat[i,j] = mat[i,j] 

print(mat)

-- ERROR:
File "XXXX", line 13
    elif(i > j)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:13:38) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input("Insira um numero:"))

mat = ones((n,n),dtype=int)

for i in range (n):
	for j in range (n):
		for x in range (n):
			if(j == x): #and (i == x) :
				mat[i,j] = mat[i,j] + x
			elif(i > j):
				mat[i,j] = mat[i,j] 

print(mat)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:19:01) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input("Insira um numero:"))

mat = zeros((n,n),dtype=int)

for i in range (n):
	for j in range (n):
			if(j == x) and (i == x):
				mat[i,j] = min(i,j) + 1

print(mat)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:19:27) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input("Insira um numero:"))

mat = zeros((n,n),dtype=int)

for i in range (n):
	for j in range (n):
			mat[i,j] = min(i,j) + 1

print(mat)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:19:53) 
-- CODE:
from numpy import*
from numpy.linalg import*

n = int(input("Insira um numero:"))

mat = zeros((n,n),dtype=int)

for i in range (n):
	for j in range (n):
			mat[i,j] = min(i,j) + 1

print(mat)

-- EXECUTION TIME:
0.837565
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
[[1]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
